# SEM6_Labs

./: .gitignore
AI/Lab4/: main.py
AI/Lab5/: main.py
CG/Lab1/: CMakeLists.txt  main.cpp  main.h
CG/Lab1/.run/: Lab1.run.xml
CG/Lab1CS/: Lab1CS.sln
CG/Lab1CS/Lab1CS/: Lab1CS.csproj  MainWindow.cs  Program.cs
CG/Lab2/: CMakeLists.txt  main.cpp  main.h
CG/Lab2/.run/: Lab1.run.xml  Lab2.run.xml
CG/Lab3/: CMakeLists.txt  main.cpp
CG/Lab3/.run/: Lab3.run.xml
CG/Lab4/: CMakeLists.txt  main.cpp  main.h
CG/Lab4/.run/: Lab4.run.xml
CG/Lab5/: CMakeLists.txt  main.cpp
DB/: AddUser.sql  AddUser2.sql
MMP/Lab8/: App.xaml  App.xaml.cs  Lab8.sln  MainWindow.xaml  MainWindow.xaml.cs
